<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Video Poker</string>
    <string name="action_settings">Settings</string>
    <string name="cashtitle">Cash:</string>
    <string name="cashvalue">0</string>
    <string name="deal">Deal</string>
    <string name="change">Change</string>
    <string name="gameover">Game over! You lost all your money!</string>
    <string name="newgame">New Game</string>
    <string name="hold">Hold</string>


    <!--Names and values of the winning hands possible-->
    <string name="royalflushtitle">Royal flush</string>
    <string name="royalflushreward">250</string>
    <string name="straightflushtitle">Straight flush</string>
    <string name="straightflushreward">50</string>
    <string name="fourofakindtitle">Four of a kind</string>
    <string name="fourofakindreward">25</string>
    <string name="fullhousetitle">Full house</string>
    <string name="fullhousereward">9</string>
    <string name="flushtitle">Flush</string>
    <string name="flushreward">6</string>
    <string name="straighttitle">Straight</string>
    <string name="straightreward">4</string>
    <string name="threeofakindtitle">Three of a kind</string>
    <string name="threeofakindreward">3</string>
    <string name="twopairstitle">Two pairs</string>
    <string name="twopairsreward">2</string>
    <string name="pairtitle">Pairs</string>
    <string name="pairreward">1</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




</resources>
